--- a/Setup.ipynb
+++ b/Setup.ipynb
@@ -111,9 +111,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de4cb8ef-9d92-4987-b6c4-900c747ceca5",
+   "metadata": {},
+   "source": [
+    "Write a function to unify column data values, ensure that: \n",
+    "* Prices are truly double. \n",
+    "* Order dates have the dd-MM-yyyy format. \n",
+    "* Addresses have the $street, $city, $state, and $zipCode format. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "164fff7b-d323-4047-9e72-c2ef2e88aad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------------+--------+------+------------+--------------------+\n",
+      "|order_id|delivery_company|quantity| price|ordered_date|             address|\n",
+      "+--------+----------------+--------+------+------------+--------------------+\n",
+      "|       1| delivery_comp_1|       1|  null|        null|                null|\n",
+      "|       2| delivery_comp_2|       2|114.77|        null|                null|\n",
+      "|       3| delivery_comp_3|       0|739.43|  14-03-2022|Main Street,Chica...|\n",
+      "|       4| delivery_comp_0|       1|878.93|  20-04-2022|                null|\n",
+      "|       5| delivery_comp_1|       2|481.44|        null|Maple Drive,Chica...|\n",
+      "|       6| delivery_comp_2|       0| 78.13|        null|Main Street,Houst...|\n",
+      "|       7| delivery_comp_3|       1|832.17|  20-02-2022|                null|\n",
+      "|       8| delivery_comp_0|       2| 687.8|  01-04-2022|Maple,Drive,Los,A...|\n",
+      "|       9| delivery_comp_1|       0|338.44|  13-04-2022|Cedar Lane,Miami,...|\n",
+      "|      10| delivery_comp_2|       1|461.33|        null|    Chicago,NY,77001|\n",
+      "|      11| delivery_comp_3|       2|544.33|  08-04-2022|Los,Angeles,CA,90001|\n",
+      "|      12| delivery_comp_0|       0| 200.2|        null|                null|\n",
+      "|      13| delivery_comp_1|       1|939.99|        null| Main,Street,Chicago|\n",
+      "|      14| delivery_comp_2|       2| 72.69|  02-03-2022|Oak,Avenue,Los,An...|\n",
+      "|      15| delivery_comp_3|       0|635.28|  15-02-2022|      Miami,FL,10001|\n",
+      "|      16| delivery_comp_0|       1|592.83|  02-03-2022|      Los,Angeles,FL|\n",
+      "|      17| delivery_comp_1|       2| 533.6|  02-03-2022|    Houston,TX,90001|\n",
+      "|      18| delivery_comp_2|       0| 424.7|        null|   New,York,TX,33101|\n",
+      "|      19| delivery_comp_3|       1|889.97|  04-03-2022|Elm Street,Miami,...|\n",
+      "|      20| delivery_comp_0|       2|222.12|  20-03-2022|      Miami,IL,77001|\n",
+      "+--------+----------------+--------+------+------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from pyspark.sql.functions import date_format,col,size\n",
+    "\n",
+    "data_set = get_format_file()\n",
+    "\n",
+    "def get_format_address(value):\n",
+    "    # Method that formats addresses\n",
+    "    split_chars = [\" \",\",\"]\n",
+    "    \n",
+    "    column_splited = split(value,\"[\"+\"\".join(split_chars)+\"]\")\n",
+    " \n",
+    "    splited = when(size(column_splited)== 5, \n",
+    "                   concat(column_splited[0],\n",
+    "                   lit(\" \"),\n",
+    "                   column_splited[1],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[2],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[3],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[4])) \\\n",
+    "    .otherwise(when(size(column_splited)== 4, \n",
+    "                   concat(column_splited[0],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[1],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[2],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[3])) \\\n",
+    "    .otherwise(when(size(column_splited)== 3, \n",
+    "                   concat(\n",
+    "                   column_splited[0],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[1],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[2])) \\\n",
+    "    .otherwise(when(size(column_splited)== 2, \n",
+    "                   concat(\n",
+    "                   column_splited[0],\n",
+    "                   lit(\",\"),\n",
+    "                   column_splited[1])))))    \n",
+    "    return splited\n",
+    "\n",
+    "    \n",
+    "def get_format_date(value):\n",
+    "    # format to handle date formats\n",
+    "    splited = when(value.like(\"%-%\"), split(value,\"-\")).otherwise(split(value,\"/\"))\n",
+    "    return concat(splited[2],lit(\"-\"),splited[1],lit(\"-\"),splited[0])\n",
+    "\n",
+    "\n",
+    "def cast_prices_double(data_set):\n",
+    "    # format to cast double \n",
+    "    return data_set.withColumn(\"price\",col(\"price\").cast(\"double\"))\n",
+    "\n",
+    "def cast_date_format(data_set):\n",
+    "    # format to handle date formats \n",
+    "    return data_set.withColumn(\"ordered_date\",\n",
+    "                               date_format(get_format_date(col(\"ordered_date\")),\"dd-MM-yyyy\"))\n",
+    "\n",
+    "def cast_address_format(data_set):\n",
+    "    return data_set.withColumn(\"address\", get_format_address(col(\"address\")))\n",
+    "\n",
+    "\n",
+    "def get_final_format():\n",
+    "    # method that applies all transformations\n",
+    "    data_set_1 = cast_prices_double(data_set)\n",
+    "    \n",
+    "    data_set_2 = cast_date_format(data_set_1)\n",
+    "    \n",
+    "    data_set_3 = cast_address_format(data_set_2)\n",
+    "    \n",
+    "    return data_set_3\n",
+    "\n",
+    "\n",
+    "\n",
+    "get_final_format().show()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61e7e6ac-7e7b-4c09-a579-8029fdfdcac3",
+   "id": "a804fa43-8c7b-4b1a-b728-3c1aef54cf7b",
    "metadata": {},
    "outputs": [],
    "source": []
