--- a/Setup.ipynb
+++ b/Setup.ipynb
@@ -242,9 +242,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61e4f48b-ccf0-44d3-9e41-b959b896e40c",
+   "metadata": {},
+   "source": [
+    "write a function to resolve missing/error-prone values. It is required to: \n",
+    "* Replace missing quantity values with average values for each delivery company \n",
+    "* Replace a null date in the ordered_date column with the following chronological date after a valid date for orders fulfilled by the same delivery company. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b73b3c34-7680-4279-b9fe-df06a0b274f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+--------+------------------+------+------------+--------------------+\n",
+      "|delivery_company|order_id|          quantity| price|ordered_date|             address|\n",
+      "+----------------+--------+------------------+------+------------+--------------------+\n",
+      "| delivery_comp_1|       5|                 2|481.44|  09-04-2022|Maple Drive,Chica...|\n",
+      "| delivery_comp_1|       9|1.0000080000640006|338.44|  13-04-2022|Cedar Lane,Miami,...|\n",
+      "| delivery_comp_1|      13|                 1|939.99|  09-04-2022| Main,Street,Chicago|\n",
+      "| delivery_comp_1|      17|                 2| 533.6|  02-03-2022|    Houston,TX,90001|\n",
+      "| delivery_comp_1|      21|1.0000080000640006|111.18|  04-02-2022|                null|\n",
+      "| delivery_comp_1|      25|                 1|118.47|  15-04-2022|Main,Street,Los,A...|\n",
+      "| delivery_comp_1|      29|                 2|749.48|  17-03-2022|Oak Avenue,Housto...|\n",
+      "| delivery_comp_1|      33|1.0000080000640006|713.49|  09-02-2022|                null|\n",
+      "| delivery_comp_1|      37|                 1|771.72|  09-04-2022|            Miami,CA|\n",
+      "| delivery_comp_1|      41|                 2|684.59|  10-02-2022|                null|\n",
+      "| delivery_comp_1|      45|1.0000080000640006|951.66|  13-03-2022|Los,Angeles,NY,10001|\n",
+      "| delivery_comp_1|      49|                 1|314.36|  09-04-2022|Cedar Lane,Housto...|\n",
+      "| delivery_comp_1|      53|                 2|494.67|  12-03-2022|      Miami,CA,10001|\n",
+      "| delivery_comp_1|      57|1.0000080000640006|105.48|  09-04-2022|Main,Street,Los,A...|\n",
+      "| delivery_comp_1|      61|                 1|828.85|  16-01-2022|Cedar Lane,Housto...|\n",
+      "| delivery_comp_1|      65|                 2|940.79|  07-03-2022|   New,York,NY,60601|\n",
+      "| delivery_comp_1|      69|1.0000080000640006|911.32|  14-03-2022|    Cedar,Lane,Miami|\n",
+      "| delivery_comp_1|      73|                 1| 28.16|  13-02-2022| Cedar,Lane,New,York|\n",
+      "| delivery_comp_1|      77|                 2|741.19|  09-04-2022|      Miami,CA,77001|\n",
+      "| delivery_comp_1|      81|1.0000080000640006|271.69|  20-03-2022|Cedar Lane,Housto...|\n",
+      "+----------------+--------+------------------+------+------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import avg, last\n",
+    "from pyspark.sql.window import Window\n",
+    "\n",
+    "fomated_df = get_final_format()\n",
+    "\n",
+    "def format_quantity(formated_df):\n",
+    "    return formated_df.join(formated_df\n",
+    "                            .groupBy(\"delivery_company\")\n",
+    "                            .agg(avg(\"quantity\").alias(\"avg_quantity\")),\"delivery_company\",\"inner\") \\\n",
+    "    .withColumn(\"quantity\", \n",
+    "                when(col(\"quantity\")!=0, \n",
+    "                     col(\"quantity\"))\n",
+    "                .otherwise(col(\"avg_quantity\"))).drop(\"avg_quantity\")\n",
+    "\n",
+    "def fill_nulls_ordered_date(format_quantity):\n",
+    "    window_spec = Window.partitionBy(\"delivery_company\")\n",
+    "\n",
+    "    return format_quantity.withColumn(\"ordered_date\",\n",
+    "                                      when(col(\"ordered_date\").isNotNull(), \n",
+    "                                           col(\"ordered_date\"))\n",
+    "                                      .otherwise(last(\"ordered_date\", True).over(window_spec)))\n",
+    "        \n",
+    "df_fill_nulls_ordered_data = format_quantity(fomated_df)\n",
+    "\n",
+    "fill_nulls_ordered_date(df_fill_nulls_ordered_data).show()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a804fa43-8c7b-4b1a-b728-3c1aef54cf7b",
+   "id": "a2a5d12d-f4de-4f02-b3f1-e56cde2d3f79",
    "metadata": {},
    "outputs": [],
    "source": []
